// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots molecules|Group default 1`] = `
.c0 {
  padding: 12px;
}

.c8 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c9 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c10 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c11 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c12 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c13 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c14 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c15 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c16 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c17 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c18 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c19 .c5 {
  font-size: 1.5em;
}

.c20 .c5 {
  font-size: 1.5em;
}

.c21 .c5 {
  font-size: 1.5em;
}

.c22 .c5 {
  font-size: 1.5em;
}

.c23 .c5 {
  font-size: 1.5em;
}

.c24 .c5 {
  font-size: 1.5em;
}

.c25 .c5 {
  font-size: 1.5em;
}

.c26 .c5 {
  font-size: 1.5em;
}

.c27 .c5 {
  font-size: 1.5em;
}

.c28 .c5 {
  font-size: 1.5em;
}

.c29 .c5 {
  font-size: 1.5em;
}

.c30 .c5 {
  font-size: 1.5em;
}

.c31 .c5 {
  font-size: 1.5em;
}

.c32 .c5 {
  font-size: 1.5em;
}

.c2 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c2:first-child {
  margin-top: 0;
}

.c2:last-child {
  margin-bottom: 0;
}

.c2,
input.c2 {
  font-size: 1.5em;
}

.c2 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c33 .c5 {
  pointer-events: none;
}

.c4 {
  width: 100%;
  height: 1px;
  background-color: #eee;
  border: 0;
  margin: 20px 20px;
}

.c3 {
  color: #999;
  margin: 0;
}

.c6 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  margin-top: 8px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 16px;
  width: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 10px;
}

.c7 {
  font-family: 'Fira Sans',sans-serif;
}

<div
  className="c0"
>
  <h1
    className="c1 c2"
    type="header"
  >
    <span
      className="c3"
    >
      Configuration
    </span>
    <hr
      className="c4"
    />
    <span
      className="c5 c6"
      data-test="group-collapser"
      onClick={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
        />
      </svg>
    </span>
  </h1>
  <div
    className="c7"
  >
    Tempora qui fugiat sint non impedit aperiam dolor omnis. Nihil assumenda dolor placeat cumque. Mollitia ea ad optio veritatis alias nihil. Ea eveniet est labore non quia explicabo eius ex.
 
Aut dolor perspiciatis consectetur quis sed eos quia nostrum et. Hic quia eaque blanditiis laudantium dignissimos quasi. Deserunt molestiae animi ut aliquid cum voluptatem modi ipsam. Et ipsam ea et nihil debitis.
 
Qui repellendus laudantium blanditiis aut expedita. Magni consequuntur et magni voluptates nesciunt id accusamus voluptas maiores. Itaque et eum voluptas atque et libero. Vel earum sint sint dicta adipisci consequuntur. Id magnam sapiente cumque similique ut rerum hic vero.
 
Quo dolor consequatur dolorum doloribus iste beatae veritatis. Odio rerum eos aut aut. Dicta eos molestiae odio officia aliquam eos et et. Provident dolores quo non maxime eveniet. Quos et vero et quam.
  </div>
</div>
`;

exports[`Storyshots molecules|Group helpers 1`] = `
.c0 {
  padding: 12px;
}

<div
  className="c0"
/>
`;

exports[`Storyshots molecules|Group x-inverted 1`] = `
.c0 {
  padding: 12px;
}

.c8 .c3 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c9 .c3 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c10 .c3 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c11 .c3 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c12 .c3 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c13 .c3 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c14 .c3 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c15 .c3 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c16 .c3 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c17 .c3 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c18 .c3 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c19 .c3 {
  font-size: 1.5em;
}

.c20 .c3 {
  font-size: 1.5em;
}

.c21 .c3 {
  font-size: 1.5em;
}

.c22 .c3 {
  font-size: 1.5em;
}

.c23 .c3 {
  font-size: 1.5em;
}

.c24 .c3 {
  font-size: 1.5em;
}

.c25 .c3 {
  font-size: 1.5em;
}

.c26 .c3 {
  font-size: 1.5em;
}

.c27 .c3 {
  font-size: 1.5em;
}

.c28 .c3 {
  font-size: 1.5em;
}

.c29 .c3 {
  font-size: 1.5em;
}

.c30 .c3 {
  font-size: 1.5em;
}

.c31 .c3 {
  font-size: 1.5em;
}

.c32 .c3 {
  font-size: 1.5em;
}

.c2 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c2:first-child {
  margin-top: 0;
}

.c2:last-child {
  margin-bottom: 0;
}

.c2,
input.c2 {
  font-size: 1.5em;
}

.c2 .c3 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c33 .c3 {
  pointer-events: none;
}

.c5 {
  width: 100%;
  height: 1px;
  background-color: #eee;
  border: 0;
  margin: 20px 20px;
}

.c6 {
  color: #999;
  margin: 0;
}

.c4 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  margin-top: 8px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 16px;
  width: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 10px;
}

.c7 {
  font-family: 'Fira Sans',sans-serif;
}

<div
  className="c0"
>
  <h1
    className="c1 c2"
    type="header"
  >
    <span
      className="c3 c4"
      data-test="group-collapser"
      onClick={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
        />
      </svg>
    </span>
    <hr
      className="c5"
    />
    <span
      className="c6"
    >
      Configuration
    </span>
  </h1>
  <div
    className="c7"
  >
    Et in iure quas sed consectetur saepe delectus. Exercitationem eius aut natus qui dolores perferendis impedit porro sequi. Alias autem perferendis molestias eius autem et. Veritatis omnis nostrum voluptate ratione est et dolor. Quia enim ipsum tenetur.
 
Et pariatur voluptate cupiditate aut aspernatur voluptatem ratione voluptatibus esse. Cupiditate autem veniam vero voluptatem dolorum blanditiis magnam. Autem qui et consequatur ea laborum. Doloremque optio veritatis ut quaerat.
 
Exercitationem dicta perspiciatis eos corrupti architecto at. Necessitatibus consequatur sit recusandae qui. Eveniet iste ducimus natus. Voluptatum minima qui est itaque soluta reprehenderit tempora quae perferendis. Esse et itaque exercitationem nisi. Dolor omnis quia et nisi est ratione.
 
Ipsum cumque nihil est placeat aliquam aperiam eligendi. Tempora occaecati nihil sed quis neque. Quidem inventore ut harum nesciunt. Iure laborum quas est dolorem ipsum iste voluptatem. Sint dolores officiis omnis sit voluptatibus laudantium earum molestiae.
  </div>
</div>
`;

exports[`Storyshots molecules|Group xy-inverted 1`] = `
.c0 {
  padding: 12px;
}

.c8 .c4 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c9 .c4 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c10 .c4 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c11 .c4 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c12 .c4 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c13 .c4 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c14 .c4 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c15 .c4 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c16 .c4 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c17 .c4 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c18 .c4 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c19 .c4 {
  font-size: 1.5em;
}

.c20 .c4 {
  font-size: 1.5em;
}

.c21 .c4 {
  font-size: 1.5em;
}

.c22 .c4 {
  font-size: 1.5em;
}

.c23 .c4 {
  font-size: 1.5em;
}

.c24 .c4 {
  font-size: 1.5em;
}

.c25 .c4 {
  font-size: 1.5em;
}

.c26 .c4 {
  font-size: 1.5em;
}

.c27 .c4 {
  font-size: 1.5em;
}

.c28 .c4 {
  font-size: 1.5em;
}

.c29 .c4 {
  font-size: 1.5em;
}

.c30 .c4 {
  font-size: 1.5em;
}

.c31 .c4 {
  font-size: 1.5em;
}

.c32 .c4 {
  font-size: 1.5em;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c3,
input.c3 {
  font-size: 1.5em;
}

.c3 .c4 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c33 .c4 {
  pointer-events: none;
}

.c6 {
  width: 100%;
  height: 1px;
  background-color: #eee;
  border: 0;
  margin: 20px 20px;
}

.c7 {
  color: #999;
  margin: 0;
}

.c5 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  margin-top: 8px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 16px;
  width: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 10px;
}

.c1 {
  font-family: 'Fira Sans',sans-serif;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Numquam dolores voluptatum non modi voluptatem consequatur consequatur quod. Praesentium est quasi voluptatum. Ducimus est rerum cumque non. Voluptate consequatur ut ullam quasi placeat quam eos accusantium.
 
In quas odio delectus iure. Tempora tempore ratione. Alias omnis voluptas qui reiciendis vitae. In amet quibusdam omnis consectetur consectetur assumenda laboriosam nostrum. Eius est sit iure in enim vel. Distinctio corporis quasi qui voluptatem nihil sit nisi fugit esse.
 
Ea eos voluptatem sint iste nostrum asperiores numquam fugiat. Cumque repellat sint unde eaque placeat quasi id voluptatum ullam. Vero itaque nisi corrupti autem. Voluptatum saepe aliquam ducimus explicabo debitis odit. Voluptatem ad qui voluptas quod.
 
Eius dolores tempore vero qui. Explicabo quae accusamus aspernatur ut tempora iure ea sunt qui. Repellendus architecto quis officiis veritatis hic est. Aliquid veniam corrupti non impedit laboriosam perspiciatis iste magnam. Facere enim molestiae libero earum voluptas delectus est aperiam voluptas.
  </div>
  <h1
    className="c2 c3"
    type="header"
  >
    <span
      className="c4 c5"
      data-test="group-collapser"
      onClick={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
        />
      </svg>
    </span>
    <hr
      className="c6"
    />
    <span
      className="c7"
    >
      Configuration
    </span>
  </h1>
</div>
`;

exports[`Storyshots molecules|Group y-inverted 1`] = `
.c0 {
  padding: 12px;
}

.c8 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c9 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c10 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c11 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c12 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c13 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c14 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c15 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c16 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c17 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c18 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c19 .c6 {
  font-size: 1.5em;
}

.c20 .c6 {
  font-size: 1.5em;
}

.c21 .c6 {
  font-size: 1.5em;
}

.c22 .c6 {
  font-size: 1.5em;
}

.c23 .c6 {
  font-size: 1.5em;
}

.c24 .c6 {
  font-size: 1.5em;
}

.c25 .c6 {
  font-size: 1.5em;
}

.c26 .c6 {
  font-size: 1.5em;
}

.c27 .c6 {
  font-size: 1.5em;
}

.c28 .c6 {
  font-size: 1.5em;
}

.c29 .c6 {
  font-size: 1.5em;
}

.c30 .c6 {
  font-size: 1.5em;
}

.c31 .c6 {
  font-size: 1.5em;
}

.c32 .c6 {
  font-size: 1.5em;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c3,
input.c3 {
  font-size: 1.5em;
}

.c3 .c6 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c33 .c6 {
  pointer-events: none;
}

.c5 {
  width: 100%;
  height: 1px;
  background-color: #eee;
  border: 0;
  margin: 20px 20px;
}

.c4 {
  color: #999;
  margin: 0;
}

.c7 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  margin-top: 8px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 16px;
  width: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 10px;
}

.c1 {
  font-family: 'Fira Sans',sans-serif;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Eligendi neque distinctio nisi eum voluptatem. Nulla iste et tempore molestiae et est consequatur ratione. Molestias molestias exercitationem consectetur eos eos tempore vel. Quisquam consequuntur veritatis rem aut maiores voluptatibus hic.
 
Alias voluptatem rem rerum ut error natus totam. Molestiae et animi veritatis pariatur corporis facere quos culpa velit. Voluptatem et corrupti doloribus veritatis illo fugit velit hic nihil. Odit aut fuga qui quae et veniam facilis veritatis. Nihil tempora libero vitae vel sunt amet alias.
 
Laboriosam et quibusdam voluptas corrupti perspiciatis cupiditate et doloremque dicta. Perferendis aliquid et incidunt aut iusto aut eum. Totam animi reiciendis velit. Id est quidem omnis et. Tempore ex tempora dolore iusto voluptates excepturi ipsa ut hic.
 
Et autem nulla asperiores rerum inventore voluptas. Et doloremque vel sunt alias dolor magnam. Sit voluptatibus aut officiis facilis qui dolorem impedit.
  </div>
  <h1
    className="c2 c3"
    type="header"
  >
    <span
      className="c4"
    >
      Configuration
    </span>
    <hr
      className="c5"
    />
    <span
      className="c6 c7"
      data-test="group-collapser"
      onClick={[Function]}
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
        />
      </svg>
    </span>
  </h1>
</div>
`;
